[build-system]
requires = ["setuptools", "wheel", "sphinx"]
build-backend = "setuptools.build_meta"

[project]
name = "example_project"
version = "0.1.0"
description = "An example project demonstrating Sphinx with Read the Docs."
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "sphinx",
    "sphinx-rtd-theme"
]
